# multisnake

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: arenaM.aseprite  arenacornerUL.aseprite  arenawallL.aseprite  assets.md  body1M.aseprite  body2M.aseprite  headL.aseprite
src/: client.rs  main.rs
